...
        return button
    }()
    private let dislikeButton: CustomButton = {
        let button = CustomButton(imageName: "heart.slash.fill", size: 25, color: UIColor.orangeRed, cornerRadius: Constants.PaddingValues.likeButtonHeight/2, shadowColor: UIColor.lightGray, backgroundColor: .white)
        return button
    }()
    private let profileButton = CustomButton(imageName: "person.fill", size: 25, color: UIColor.lightGray, cornerRadius: nil, shadowColor: nil, backgroundColor: .clear)
    private let messageButton = CustomButton(imageName: "message.fill", size: 25, color: UIColor.lightGray, cornerRadius: nil, shadowColor: nil, backgroundColor: .clear)
    
    // MARK: Initializer
    override init(frame: CGRect) {
        super.init(frame: frame)
        setup()
        addSubViews()
...
