...
//

import UIKit

class EditUserDetailsViewController: UIViewController {
    // MARK: - Properties
    private let editUserDetailsView = EditUserDetailsView()
    private let database: Database
    private let auth: Authentication
    var user: UserModel?
    var textViewEditingDelegate: TextViewEditingDelegate?
    var tapGestureDelegate: ImageTapGestureDelegate?
    
...
