...
import UIKit
import Lottie

class EmailLoginView: UIView {
    // MARK: - Properties
    private let appLogo = AppLogoView()
    private let emailLabel = SectionTitleLabel(title: "Email")
    private let emailTextField = CustomTextField(placeholder: "Email", keyboardType: .emailAddress)
    private let passwordTextField = PasswordTextField()
    private let loginButton = RoundedButton(title: "LOG IN", color: UIColor.amour)
    private let backButton = BackButton()
    private let errorLabel = ErrorLabel()
    private var containerView = CustomContainerView()
    private var keyboardFrame = CGRect()
    private var containerBotomAnchor: NSLayoutConstraint?
    private var appLogoTopAnchor: NSLayoutConstraint?
...
